Correção na localização dos arquivos

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,27 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        # use your user class name here
+        App\Entity\User:
+            algorithm: argon2i
+
     providers:
-        in_memory: { memory: ~ }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/api/
             anonymous: true
+            stateless: true
+            guard:
+                authenticators:
+                    - App\Security\JwtAuthenticator
 
             # activate different ways to authenticate
 
