--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -5,8 +5,7 @@ server {
 
     access_log /var/log/nginx/application.access.log;
 
-
-    root /application;
+    root /application/public;
     index index.php;
 
     if (!-e $request_filename) {
